# market-workbench

./: README.md  ROADMAP.md  pyproject.toml
lesson_001/: agent.py  async_market_brief.py  streaming_market_brief.py  sync_market_brief.py
lessons/: 001-openai-agents-sdk-basics.md
src/lesson_001/: async_market_brief.py  streaming_market_brief.py  sync_market_brief.py
src/market_workbench/: __init__.py
src/market_workbench/lesson_001/: agent.py  async_market_brief.py  streaming_market_brief.py  sync_market_brief.py
src/market_workbench/lesson_002/: agent.py  chain_market_note.py
src/market_workbench/lesson_003/: agent.py  multi_turn_market_chat.py
src/sovereign_markets_mcp/: __init__.py
